# station-reservation

./: .gitignore  Cargo.toml  LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs  model.rs  models.rs
backend/src/model/: station.rs
frontend/: index.html  script.js
